test/expected/explain_cast_rgi.out
explain (register int)x
                  ^
19: error: can not cast into register
